# biometric_integration

./: README.md  pyproject.toml
.github/workflows/: ci.yml
biometric_integration/: hooks.py
biometric_integration/biometric_integration/doctype/attendance_leave_log/: attendance_leave_log.js  attendance_leave_log.json  attendance_leave_log.py  test_attendance_leave_log.py
biometric_integration/biometric_integration/doctype/biometric_attendance_leave_table/: biometric_attendance_leave_table.json  biometric_attendance_leave_table.py
biometric_integration/biometric_integration/doctype/biometric_attendance_log/: biometric_attendance_log.js  biometric_attendance_log.json  biometric_attendance_log.py  test_biometric_attendance_log.py
biometric_integration/biometric_integration/doctype/biometric_attendance_punch_table/: biometric_attendance_punch_table.json  biometric_attendance_punch_table.py
biometric_integration/biometric_integration/doctype/biometric_integration_settings/: biometric_integration_settings.js  biometric_integration_settings.json  biometric_integration_settings.py  test_biometric_integration_settings.py
biometric_integration/biometric_integration/doctype/biometric_leave_log/: biometric_leave_log.js  biometric_leave_log.json  biometric_leave_log.py  test_biometric_leave_log.py
biometric_integration/desktop_icon/: biometric_integration.json
biometric_integration/fixtures/: employment_type.json
biometric_integration/workspace_sidebar/: biometric_integration.json
(+17 files in other folders)
